# Master_TM_DataCollar

./: .gitignore  README.md
01-Report/diagram/: block.drawio  (+9 more)
03-Software/nrf-monkey-main/: .gitignore  CMakeLists.txt  Kconfig  README.md  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.overlay  pm_static.yml  pm_static_old.yml  prj.conf
03-Software/nrf-monkey-main/memory-report/: ram_memory-report.txt  rom_memory-report.txt
03-Software/nrf-monkey-main/scripts/unused/: build_collar_firmware.sh
03-Software/nrf-monkey-main/src/: define.h  firmware-revision.h  main.c
03-Software/nrf-monkey-main/src/audio/: recorder.c  recorder.h
03-Software/nrf-monkey-main/src/ble/: ble_handler.c  ble_handler.h  ble_proximity.c  ble_proximity.h  hss.h  sig_cts.c  sig_dis.c  snes.c  snes.h
03-Software/nrf-monkey-main/src/fatfs/: sdcard.c  sdcard.h
03-Software/nrf-monkey-main/src/hal/: gpio_hal.c  gpio_hal.h
03-Software/nrf-monkey-main/src/microphone/: t5848.c  t5848.h
03-Software/nrf-monkey-main/src/storage/: flash.c  flash.h
03-Software/nrf-monkey-main/src/utils/: tools.c
03-Software/nrf-monkey-main/uml/: settings.puml
03-Software/nrf-monkey-main/uml/ble/: ble-flush.puml  ble-initialization-sequence.puml  ble-proximity-sequence.puml  ble-sequence.puml
03-Software/nrf-monkey-main/uml/diagram/: mic-state.puml
03-Software/nrf-monkey-main/uml/main/: initialization-main-sequence.puml  operational-main-sequence.puml
03-Software/sd_card_access_nrf54/: .gitignore  CMakeLists.txt  Kconfig  prj.conf
03-Software/sd_card_access_nrf54/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
03-Software/sd_card_access_nrf54/nrf54l15_ncs300/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  partitions.yml  pm.config  sd_card_access_nrf54_sysbuild_cache.txt  sysbuild_modules.txt
03-Software/sd_card_access_nrf54/src/: define.h  main.c
(+366 files in other folders)
